--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,7 +42,7 @@ signs:
       # need to pass the batch flag to indicate its not interactive.
       - "--batch"
       - "--local-user"
-      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+      - "5E90AE66015455570A5461CC85686851959206E3" # set this environment variable for your signing key
       - "--output"
       - "${signature}"
       - "--detach-sign"
